<resources>
    <string name="app_name">ManagementWarung</string>
    <string name="title_activity_sign_in">Masuk Dulu</string>

    <!-- Strings related to login -->
    <string name="prompt_user">User</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_user">User Salah</string>
    <string name="error_incorrect_password">Password Salah</string>
    <string name="error_us_and_pw">User atau Password Salah!</string>
    <string name="title_activity_user">ManagementWarung</string>
    <string name="konfirmasi_delete">Apa anda yakin ingin mengahapus data ini?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="jenis_lap">
        <item>Laporan Masuk</item>
        <item>Laporan Keluar</item>
        <item>Laporan Buka Warung</item>
        <item>Laporan Tutup Warung</item>
    </string-array>

    <string-array name="kataBijak">
        <item>Jangan mengeluh di hadapan pelanggan apalagi menunjukkan emosi yang negatif.</item>
        <item>Biar sedikit dan lambat asal selamat.</item>
        <item>Pedagang harus memiliki daya tahan, mental, dan jiwa yang kuat.</item>
        <item>Kerugian jangka pendek merupakan jalan yang dilalui untuk mendapatkan keuntungan jangka panjang.</item>
        <item>Pedagang tidak boleh terlalu kaku. Namun sebaliknya, perlu memperbolehkan proses tawar-menawar</item>
        <item>Kesabaran itu memang pahit, tetapi buahnya sangat manis.</item>
        <item>Perjalanan seribu batu dimulai dengan langkah pertama.</item>
        <item>Tahukah anda ? 85% kesuksesan karena sikap Positif dan 15% karena Kepandaiannya.</item>
        <item>Jika ingin sukses, HARUS siap untuk DIUJI dan DIPROSES</item>
        <item>Agar keuntungan terus bertambah, sebagian dari keuntungan harus disalurkan kepada mereka yang memerlukan</item>
    </string-array>

    <string name="action_settings">Settings</string>

    <!--Contoh Setting General -->
    <string name="pref_header_general">General</string>

    <string name="pref_auto_logout">Auto Logout</string>
    <string name="pref_auto_logout_description">Jika aktif, maka ketika device Idle 5 menit, maka akan auto-logout
    </string>

    <string name="pref_title_display_name">Ganti Password</string>
    <string name="pref_default_display_name">John Smith</string>

    <!-- Buat About -->
    <string name="about_app_title">About This App</string>
    <string name="about_app_subtitle"> WarungQ : Aplikasi manajemen Warung</string>
    <string name="about_app_subtitle_2">Aplikasi Pembantu Urusan Warung, Versi 1.0 (Beta)</string>
    <string name="about_app_subtitle_3">Buatan : Ikbar Rafif , dengan Resource Seadanya dari google</string>
    <string name="about_app_content_1">WarungQ, Aplikasi ini Mempunyai 3 Fitur, Yaitu : </string>
    <string name="about_app_feature_1">* Data Barang</string>
    <string name="about_app_feature_2">* Laporan Keuangan</string>
    <string name="about_app_feature_3">* Contact Sales</string>
    <string name="about_app_contet_2">Jika ada Kritik, atau Saran. Bisa menghubungi saya di :</string>


</resources>
